--- a/registros/templates/index.html
+++ b/registros/templates/index.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1>Torneo de copa</h1>
+    <h2>Equipos registrados</h2>
 
     <ul>
         {% for equipo in equipos %}
