Función eliminar jugador implementada. Los archivos relacionados con el jugador también se eliminan para ello se modificó el método delete del modelo jugador y se agregó una página de confirmación antes del borrado.

--- a/registros/templates/jugadores/jugador_detail.html
+++ b/registros/templates/jugadores/jugador_detail.html
@@ -25,7 +25,7 @@
     {% endif %}
 
     <a href="">Editar</a>
-    <a href="">Eliminar</a>
+    <a href="{% url 'eliminar_jugador' id_jugador=jugador.id %}">Eliminar</a>
     <a href="{% url 'equipo' jugador.equipo.id %}">Volver</a>
 
 {% endblock %}
