--- a/registros/templates/jugadores/eliminar_jugador.html
+++ b/registros/templates/jugadores/eliminar_jugador.html
@@ -6,7 +6,7 @@
     <h1>Estas a punto de eliminar al jugador: {{ jugador.nombre }}</h1>
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary">Eliminar</button>
+        <button type="submit">Eliminar</button>
         <a href="{% url 'equipo' jugador.equipo.id %}">Cancelar</a>
     </form>
 {% endblock %}
