--- a/registros/templates/jugadores/registrar_jugador.html
+++ b/registros/templates/jugadores/registrar_jugador.html
@@ -3,14 +3,18 @@
 {% block title %}  {% endblock %}
 
 {% block content %}
-    <h2>Registrar nuevo jugador al equipo: {{ equipo.nombre }}</h2>
+    {% if jugador %}
+        <h2>Actualizar datos del jugador: {{ jugador.nombre }}</h2>
+    {% else %}
+        <h2>Registrar nuevo jugador al equipo: {{ equipo.nombre }}</h2>
+    {% endif %}
 
     <form method="post" enctype="multipart/form-data">
 
         {% csrf_token %}
         {{ form.as_p }}
 
-        <button type="submit">Registrar Jugador</button>
+        <button type="submit">Aceptar</button>
 
     </form>
 
