Se aplicaron estilos css haciendo uso de archivos estaticos.

--- a/registros/templates/equipos/registrar_equipo.html
+++ b/registros/templates/equipos/registrar_equipo.html
@@ -12,4 +12,7 @@
         <button type="submit">Registrar Equipo</button>
 
     </form>
+
+    <a href="{% url 'index' %}">Volver</a>
+
 {% endblock %}
